--- a/site/intro/index.html
+++ b/site/intro/index.html
@@ -70,6 +70,10 @@
                             <a class="
                             nav-link text-gray text-decoration-none" href="../drivetrain/">[Drivetrains]</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="
+                            nav-link text-gray text-decoration-none" href="../control/">[Control Theory]</a>
+                        </li>
             </ul>
         </li>
 <!-- endblock -->
@@ -99,7 +103,7 @@
         </header>
         <p><p>All Java programming for FTC is done through Android Studio, which you can download <a href="https://developer.android.com/studio" target="_blank">here</a>. Instructions for setting up your FTC project can be found <a href="https://gm0.org/en/latest/docs/software/getting-started/using-android-studio.html" target="_blank">here</a>.</p>
 <p>Game Manual 0 has a great guide for getting started with Java and covers elementary concepts such as defining hardware devices. I recommend you go through that guide first as it is how I got my first introduction to FTC programming. The guide can be found <a href="https://gm0.org/en/latest/docs/software/getting-started/index.html" target="_blank">here</a>.</p>
-<p>Once you have a good grasp of the fundamentals, we can begin going over some more advanced topics. You can also use block programming, but that will not be covered in this guide.</p></p>
+<p>Once you have a good grasp of the fundamentals, we can begin going over some more advanced topics.</p></p>
     </article>
 </section>
 <!-- endblock -->
